<resources>
    <string name="app_name">Tabea</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_editTodo">Edit</string>
    <string name="menu_deleteTodo">Delete</string>
    <string name="new_task">New Task</string>
    <string name="todo">Todo</string>
    <string name="description">Description</string>
    <string name="add_description">Add Description</string>
    <string name="remove_description">Remove Description</string>
    <string name="time">%1$s:%2$s</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="yes">YES</string>
    <string name="date">Date</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="cancel">CANCEL</string>
    <string name="deleteTask">Delete All Task</string>
    <string name="clearTasksDialogMsg">Do You Really want To Delete All Tasks ? </string>
    <string name="delete_all_task">Delete all Task</string>
    <string name="sort_by_asc">Sort By ASC</string>
    <string name="sort_by_des">Sort By DES</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="sort_by_time">Sort By Time</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="inbox">InBox</string>
    <string name="today">Today</string>
    <string name="completed_task">Completed Task</string>
    <string name="won_t_do">won\'t Do</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Task Time</string>
    <string name="task_not_found">Task not found</string>
    <string name="task_added_successfully">Task added successfully</string>
    <string name="empty_task_msg">Please don\'t let any information empty</string>
    <string name="unknown_error_occurred">"An unknown error occurred."</string>
    <string name="all_tasks_are_deleted">All tasks are deleted.</string>
    <string name="could_not_delete_tasks">Could\'nt delete the tasks, Try Again.</string>
    <string name="could_not_delete_task">Could\'nt delete the task, Try Again.</string>
    <string name="ready_for_some_new_tasks_tap_plus_to_write_them_down">Ready for some new tasks? Tap + to write them down.</string>
    <string name="details">Details:</string>
</resources>