<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clearList"
        android:title="@string/delete_all_task"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_delete_24">
    </item>

    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        app:showAsAction="ifRoom">

<menu>
        <item
            android:id="@+id/filterByDate"
            android:title="@string/sort_by_date"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/filterByDES"
            android:title="@string/sort_by_des"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/filterByAES"
            android:title="@string/sort_by_asc"
            app:showAsAction="ifRoom"/>
</menu>

    </item>


</menu>

