<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clearList"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete_all_task"
        app:showAsAction="always" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sortByDate"
                android:title="@string/sort_by_date"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/sortByDES"
                android:title="@string/sort_by_des"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/sortByAES"
                android:title="@string/sort_by_asc"
                app:showAsAction="ifRoom" />
        </menu>

    </item>


</menu>

