<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/inboxfragment"
        android:title="@string/inbox"
        android:icon="@drawable/ic_baseline_inbox_24"
       />

    <item
        android:id="@+id/todayTaskFragment"
        android:title="@string/today"
        android:icon="@drawable/ic_baseline_calendar_today_24">

    </item>

    <item
        android:id="@+id/completedTaskFragment"
        android:title="@string/completed_task"
        android:icon="@drawable/check">

    </item>


    <item
        android:id="@+id/wontDoFragment"
        android:title="@string/won_t_do"
        android:icon="@drawable/cancel_button">

    </item>



</menu>
