<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTodoFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
   >

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/new_task"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <View
        android:id="@+id/divider2"
        style="@style/Widget.Todo.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:textColor="@color/yellow_400"
        android:textStyle="bold"
        android:layout_marginStart="6dp"
        android:labelFor="@id/todoEdittext" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/todoEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="12dp"
        android:textColorHint="@color/yellow_400">
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/description"
        android:textColor="@color/yellow_400"
        android:textStyle="bold"
        android:labelFor="@id/descriptionEdittext" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionEdittext"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textColorHint="@color/yellow_400">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/calender"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="80dp"/>


        <ImageView
            android:id="@+id/time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/stopwatch"/>


    </LinearLayout>

    <View
        android:id="@+id/divider3"
        style="@style/Widget.Todo.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTaskButton"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/add"/>
    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    </LinearLayout>
</ScrollView>