<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="editTodoFragment"
            type="com.renad.tabea.ui.upsert.UpsertTaskFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">


            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:labelFor="@id/todoEdittext"
                android:text="@string/todo"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/todoEdittext"
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:labelFor="@id/descriptionEdittext"
                android:text="@string/description"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionEdittext"
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:inputType="textMultiLine"
                android:scrollbars="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/lightGray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/lightGray"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/calender"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/calendar" />

                <ImageView
                    android:id="@+id/time"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/stopwatch" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                style="@style/Widget.Todo.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doneButton"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:onClick="@{() -> editTodoFragment.editDataOrShowToast()}"
                tools:text="@string/add" />


        </LinearLayout>
    </ScrollView>
</layout>